<resources>
    <string name="app_name">MSPL Executive</string>
    <string name="title_activity_login">MSPL Executive</string>
    <string name="error_invalid_password">This field is required</string>
    <string name="error_field_required">This field is required</string>
    <string name="footer2">© Copyright 2018 PAIT BSPL All Rights Reserved.</string>
    <string name="footer">© Copyright 2018 PAIT BIZ SYSTEMS PVT.LTD. All Rights Reserved.</string>
    <string name="footer1">© Copyright 2017 LNB Infotech Pvt.Ltd. All Rights Reserved.</string>
    <string name="pref_isRegister">isRegister</string>
    <string name="pref_isTableSaved">isTableSaved</string>
    <string name="pref_isCategorySaved">isCategorySaved</string>
    <string name="pref_compName">compName</string>
    <string name="pref_address">address</string>
    <string name="pref_contactNo">contactNo</string>
    <string name="pref_expiryDate">expiryDate</string>
    <string name="pref_username">username</string>
    <string name="pref_password">password</string>
    <string name="pref_emptype">emptype</string>
    <string name="pref_ticketTotal">tickettotal</string>
    <string name="pref_auto">auto</string>
    <string name="pref_ClientName">ClientName</string>
    <string name="pref_mobno">mobno</string>
    <string name="pref_FTPLocation">FTPLocation</string>
    <string name="pref_FTPUser">FTPUser</string>
    <string name="pref_FTPPass">FTPPass</string>
    <string name="pref_FTPImgFolder">FTPImgFolder</string>
    <string name="pref_CustomerName">CustomerName</string>
    <string name="pref_retailCustId">retailCustId</string>
    <string name="pref_branchid">branchid</string>
    <string name="pref_cityid">cityid</string>
    <string name="pref_IMEI">IMEI</string>
    <string name="pref_logged">logged</string>
    <string name="pref_isRegistered">isRegistered</string>
    <string name="enter_client_id_here">Enter Client Id Here</string>
    <string name="verify">Verify</string>
    <string name="company_details">Company Details</string>
    <string name="company_name">Company</string>
    <string name="address">Address</string>
    <string name="enterdate">Select Cheque Date</string>
    <string name="enterno">Enter Cheque Number</string>
    <string name="enteramt">Enter Amount</string>
    <string name="enteragainstref">Enter Against Ref</string>
    <string name="contact_no">Contact No</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="enter_your_credentials">Enter Your Credentials</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="enter_number_of_tables">Enter Number Of Tables</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="addmore">Add Cheque Details</string>
    <string name="enterchequedetails">Enter Cheque Details</string>
    <string name="enteraddresshere">Enter Address Here</string>
    <string name="total_number_of_tables_you_have">Total Number Of Tables You Have</string>
    <string name="count">Count</string>
    <string name="cat1">Cat1</string>
    <string name="enter_cat1_name">Enter Cat1 Name</string>
    <string name="select_cat1">Select Cat1</string>
    <string name="cat2">Cat2</string>
    <string name="enter_cat2_name">Enter Cat2 Name</string>
    <string name="enter_tax_name">Enter Tax Name</string>
    <string name="rate">Rate</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="change_cat1">Change Cat1</string>
    <string name="add">Add</string>
    <string name="attach_image">Attach Image</string>
    <string name="attachchequeimage">Attach Cheque Image</string>
    <string name="salesman">Salesman:</string>
    <string name="frontoffice">FrontOffice:</string>
    <string name="proceed">Proceed</string>
    <string name="search_item">Search Item</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh Data</string>
    <string name="table_no">Table No</string>
    <string name="tablename">TableName</string>
    <string name="waiter">Waiter</string>
    <string name="print">Print</string>
    <string name="item">Item</string>
    <string name="qty">Qty</string>
    <string name="amount">Amnt</string>
    <string name="_0">0</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="new_devices_available">New Devices Available</string>
    <string name="scan_new_device">Scan New Device</string>
    <string name="categoryClass">Category</string>
    <string name="bluetooth_new_device_list">Bluetooth New Device List</string>
    <string name="bluetooth_paired_device_list">Bluetooth Paired Device List</string>
    <string name="test">Test</string>
    <string name="remark">Remark</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="tab1">TAB1</string>
    <string name="total">Total</string>
    <string name="cash">Cash</string>
    <string name="_cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="enter_cash_amount">Enter Cash Amount</string>
    <string name="enter_card_amount">Enter Card Amount</string>
    <string name="tender">Tender</string>
    <string name="return_amnt">Return Amnt</string>
    <string name="enter_tender_amount">Enter Tender Amount</string>
    <string name="return_amount_will_show_here">Return Amount Will Show Here</string>
    <string name="balance">Balance</string>
    <string name="net_amt">NET AMT</string>
    <string name="balance_amount_will_show_here">Balance Amount Will Show Here</string>
    <string name="_5000">5000</string>
    <string name="cancel">Cancel</string>
    <string name="_cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">LogIn</string>
    <string name="previous_name">Previous Name</string>
    <string name="update">Update</string>
    <string name="print_bill">Print Bill</string>
    <string name="add_masters">Add Masters</string>
    <string name="add_tax">Add Tax</string>
    <string name="logout">Logout</string>
    <string name="prev_name">Prev Name</string>
    <string name="tv_perv_tax_name">tv_perv_tax_name</string>
    <string name="new_name">New Name</string>
    <string name="tax_name">Tax Name</string>
    <string name="collection_report">Collection Report</string>
    <string name="itemwise_sale">Itemwise Sale</string>
    <string name="data_imported_data">Data Imported Date</string>
    <string name="no_data_imported">No Data Imported</string>
    <string name="import_data_from_date_range">Import Data From Date Range</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="all_dates">All Dates</string>
    <string name="show">Show</string>
    <string name="customername">Customer Name</string>
    <string name="shopname">Shop Name</string>
    <string name="enternewcustomername">Enter New Customer Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="emailid">Email Id</string>
    <string name="paymenttype">Payment Type</string>
    <string name="cheque">Cheque</string>
    <string name="enteramount">Enter Amount</string>
    <string name="selectcustomername">Select Customer Name</string>
    <string name="enetrcustomername">Customer Name</string>
    <string name="enetrshopname">Shop Name</string>
    <string name="selectbranch">Select Branch Name</string>
    <string name="selectbank">Select Bank Name</string>
    <string name="selectaddressproof">Select Address Proof</string>
    <string name="_selectaddressproof">Address Proof</string>
    <string name="selectidproof">Select Id Proof</string>
    <string name="_selectidproof">Id Proof</string>
    <string name="addressproofimage">Attach Address Proof Image</string>
    <string name="_addressproofimage">Address Proof Image</string>
    <string name="customerimage">Attach Customer Image</string>
    <string name="_customerimage">Customer Image</string>
    <string name="idproofimage">Attach Id Proof Image</string>
    <string name="_idproofimage">Id Proof Image</string>
    <string name="gstno">GSTIN No</string>
    <string name="panno">PAN No</string>
    <string name="enterpanno">Enter PAN No</string>
    <string name="entergstno">Enter GST No</string>
    <string name="gstnoimage">Attach GST No Image</string>
    <string name="pannoimage">Attach PAN No Image</string>
    <string name="_gstnoimage">GST No Image</string>
    <string name="_pannoimage">PAN No Image</string>
    <string name="date">Date</string>
    <string name="number">Chq Number</string>
    <string name="amt">Chq Amount</string>
    <string name="againstref">Against Ref</string>
    <string-array name="navigationName">
        <item>Home</item>
        <item>Table Master</item>
        <item>Category Master</item>
        <item>GST Master</item>
        <item>Printer Options</item>
        <item>Reports</item>
        <item>Logout</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_name">Group Name</string>
    <string name="select_group_name">Select Group Name</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="from_range">From Range</string>
    <string name="to_range">To Range</string>
    <string name="gst_per">GST Per</string>
    <string name="cgst_per">CGST Per</string>
    <string name="sgst_per">SGST Per</string>
    <string name="cgst_share">CGST Share</string>
    <string name="sgst_share">SGST Share</string>
    <string name="cess_per">Cess Per</string>
    <string name="report_error">Report Issue</string>
    <string name="customer_name">Customer Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="areaid">areaid</string>
    <string name="email_id">Email Id</string>
    <string name="_cc">cc</string>
    <string name="_save">Save</string>
    <string name="enterdescription">Enter Description Here</string>
    <string name="sendfed">Send</string>
    <string name="article_no">Article No:</string>
    <string name="invoice_no">Invoice No:</string>
    <string name="_qty">Qty:</string>
    <string name="you_are_offline">You Are Offline</string>
    <string name="invalid_mob_no">Invalid Mobile Number</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="pleaseenterotp">Please Enter OTP</string>
    <string name="doyouwanttoexitfromapp">Do You Want To Exit From App?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="done">Done</string>
    <string name="areyousuretoreceiveotponthisnumber">Are You Sure To Receive OTP On This Number ?</string>
    <string name="edit">Edit</string>
    <string name="numbernotmatch">Number Not Match</string>
    <string name="pleaseenterregisteredmobilenumber">Please Enter Registered Mobile Number</string>
    <string name="somethingwentwrong">Something Went Wrong</string>
    <string name="pleasecontactyouradministrator">Please Contact Your Administrator</string>
    <string name="registrationdonesuccessfully">Registration Done Successfully</string>
    <string name="orderno">Order No</string>
    <string name="orderamt">Order Amount</string>
    <string name="orderqty">Order Qty</string>
    <string name="cart">Cart</string>
    <string name="prod">Prod Id</string>
    <string name="sizeg">Size Group</string>
    <string name="color">Color</string>
    <string name="wsp">WSP</string>
    <string name="mr">MRP</string>
    <string name="gst">GST %</string>
    <string name="clear">Clear Order</string>
</resources>