<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item android:id="@+id/logout"
        android:icon="@drawable/logout_"
        android:title="@string/logout"
        app:showAsAction="never"/>-->

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart_of_ecommerce_1"
        android:title="@string/cart"
        app:actionLayout="@layout/actionbaar_badge_layout"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notification1"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/refresh"
                android:icon="@drawable/ic_autorenew_black_24dp"
                android:title="@string/refresh" />

            <item
                android:id="@+id/clear"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/clear" />

            <item
                android:id="@+id/report_error"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/report_error" />

            <item
                android:id="@+id/sync_image"
                android:icon="@drawable/ic_cloud_upload_white_24dp"
                android:title="Sync Image" />
        </menu>
    </item>

</menu>