<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/tv_prod_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/line_left_right_bottom_draw"
            android:gravity="center"
            android:text="@string/prod"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_size_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:text="@string/sizeg"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:text="@string/color"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_loose_qty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:text="orderqty"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_invqty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:text="orderqty"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_cancleqty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:text="orderqty"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="@dimen/vieworderc_prodid"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/wsp"
            android:background="@drawable/line_right_bottom_draw"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_wsp"
            android:visibility="gone" />
        <TextView
            android:layout_width="@dimen/vieworderc_prodid"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mr"
            android:textColor="@color/black"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:id="@+id/tv_mr"
            android:visibility="gone" />
        <TextView
            android:layout_width="@dimen/vieworderc_prodid"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/amt"
            android:background="@drawable/line_right_bottom_draw"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_amt"
            android:visibility="gone" />
        <TextView
            android:layout_width="@dimen/vieworderc_prodid"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gst"
            android:background="@drawable/line_right_bottom_draw"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_gst_per"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>