<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.lnbinfotech.msplfootwearex.VisitPaymentFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView2"
            android:padding="5sp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <android.support.design.widget.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/selectcustomername"
                android:layout_margin="5sp">

                <EditText
                    android:drawableRight="@drawable/search"
                    style="@style/textViewMob"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:id="@+id/ed_cus_name" />
            </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/paymenttype"
                    style="@style/textViewMob"
                    android:id="@+id/textView2" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp">

                    <RadioButton
                        style="@style/textViewMob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_cash"
                        android:id="@+id/rdo_cash"
                        android:layout_weight="0.5"
                        android:checked="true"/>

                    <RadioButton
                        style="@style/textViewMob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cheque"
                        android:id="@+id/rdo_cheque"
                        android:layout_weight="0.5"
                        android:checked="false"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/enteramount"
                    style="@style/textViewMob"
                    android:id="@+id/textView1" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:visibility="visible">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/ed_amount"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/cheque_lay"
                    android:visibility="gone">



                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/chqbtn_det_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:gravity="center|right">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@drawable/white_button_background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4sp"
                        android:src="@drawable/cheque_"
                        android:id="@+id/imageView_cheque" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/enterchequedetails"
                        style="@style/textViewMob"
                        android:id="@+id/tv_cheque_details" />
                    </LinearLayout>
                </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:padding="5sp"
                        android:id="@+id/add_more_lay"
                        android:visibility="visible">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orange"
                            android:text="@string/addmore"
                            style="@style/textViewMob"
                            android:id="@+id/tv_add_more" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

                    <!--<android.support.v7.widget.AppCompatButton

                        app:backgroundTint="@color/lightpeach"
                        android:drawableLeft="@drawable/cheque_button_back"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enterchequedetails"
                        android:id="@+id/btn_cheque_details"
                        android:layout_weight="0.19" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:id="@+id/list_lay"
            android:layout_weight="1"
            android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/lightpurple"
            android:padding="5sp">
            <TextView
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:gravity="left"
                android:layout_weight="0.3" />
            <TextView
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:gravity="left"
                android:layout_weight="0.3" />
            <TextView
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amt"
                android:textColor="@color/white"
                android:gravity="right"
                android:layout_weight="0.3" />
            <TextView
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/againstref"
                android:textColor="@color/white"
                android:gravity="right"
                android:layout_weight="0.3" />

        </LinearLayout>


                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/lv_show_chq_detail"
                        android:visibility="visible"
                        android:layout_weight="1">

                    </ListView>
            </LinearLayout>




                <android.support.v7.widget.AppCompatButton
                        android:layout_gravity="center"
                        app:backgroundTint="@color/orange"
                        android:drawableLeft="@drawable/save_button_back"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:id="@+id/btn_save" />




</LinearLayout>
</LinearLayout>