<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lnbinfotech.msplfootwearex.TrackOrderActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mobmargin2">

        <LinearLayout
            android:background="@color/maroon"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_layout">

            <TextView
                style="@style/textViewMob"
                android:textColor="@color/white"
                android:layout_gravity="left|center"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date"
                android:layout_weight="0.2" />
            <TextView
                style="@style/textViewMob"
                android:textColor="@color/white"
                android:layout_gravity="left|center"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/orderno"
                android:layout_weight="0.2" />
            <TextView
                style="@style/textViewMob"
                android:textColor="@color/white"
                android:layout_gravity="right|center"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/orderqty"
                android:layout_weight="0.2" />
            <TextView
                style="@style/textViewMob"
                android:textColor="@color/white"
                android:layout_gravity="right|center"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/orderamt"
                android:layout_weight="0.2" />
        </LinearLayout>
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            style="@style/footerstyleMob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    </LinearLayout>

